2000-01-20  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* gtksourceview/gtksourceprintcompositor.c: fix a couple of
	typos in docs.

2008-01-17  Yevgen Muntyan  <muntyan@tamu.edu>

	* gtksourceview/language-specs/fortran.lang: added comment
	property, patch by rsachetto@gmail.com (#510032).
	* gtksourceview/language-specs/docbook.lang: removed obsolete
	dtd line.

=== gtksourceview 2.1.0 ===

2008-01-14  Paolo Maggi  <paolo@gnome.org>

	Added new gtk-print based printing API.

	* docs/reference/gtksourceview-2.0-sections.txt: updated
	* docs/reference/gtksourceview-2.0.types: updated
	* docs/reference/gtksourceview-docs.sgml: updated
	* docs/reference/tmpl/printjob.sgml: removed
	* docs/reference/tmpl/printcompositor.sgml: new file
	* gtksourceview/gtksourceprintcompositor.c: new file
	* gtksourceview/gtksourceprintcompositor.h: new file
	* gtksourceview/gtksourcebuffer.c: normalize returned value
	for boolean getters
	* gtksourceview/gtksourceview.c: ditto
	* gtksourceview/Makefile.am: updated
	* tests/test-widget.c: added test for printing

2008-01-13  Jonathon Jongsma  <jjongsma@gnome.org>

	* gtksourceview/gtksourceview.c: sort the list of marks with lowest-priority
	marks first so that they get drawn on the bottom.  Fixes bug #509167

2000-01-05  Gian Mario Tagliaretti  <gianmt@gnome.org>

	* docs/reference/tmpl/stylescheme.sgml:
	* docs/reference/tmpl/languagemanager.sgml:

	Restore docs templates, use gtk-doc from trunk.

2008-01-05  Paolo Borelli  <pborelli@katamail.com>
            Johannes Schmid <jhs@gnome.org>

	* configure.ac:
	Bumped version to 2.1.0

	* docs/reference/gtksourceview-2.0-sections.txt:
	* docs/reference/gtksourceview-2.0.types:
	* docs/reference/gtksourceview-docs.sgml:
	* docs/reference/tmpl/buffer.sgml:
	* docs/reference/tmpl/languagemanager.sgml:
	* docs/reference/tmpl/mark.sgml:
	* docs/reference/tmpl/marker.sgml: (removed)
	* docs/reference/tmpl/stylescheme.sgml:
	* docs/reference/tmpl/view.sgml:
