@@ -18,6 +18,7 @@ LANGUAGES =			\
 	dpatch.lang		\
 	dtd.lang		\
 	erlang.lang		\
+	forth.lang		\
 	fortran.lang		\
 	gap.lang		\
 	gtk-doc.lang		\
